--- a/admin/public/.htaccess
+++ b/admin/public/.htaccess
@@ -10,6 +10,28 @@ RewriteEngine on
 # TARGET: ?users=logout
 RewriteRule ^users\/logout$ index.php?users=logout [L]
 
+# ROUTE DES RECIPES -------------
+
+# RECIPES.INDEX
+# PATTERN: /recipes
+# TARGET: ?recipes=index
+RewriteRule ^recipes$ index.php?recipes=index [L]
+
+# RECIPES.ADD
+# PATTERN: /recipes/add
+# TARGET: ?recipes=add
+RewriteRule ^recipes\/add$ index.php?recipes=add [L]
+
+# RECIPES.CREATE
+# PATTERN: /recipes/create
+# TARGET: ?recipes=create
+RewriteRule ^recipes\/create$ index.php?recipes=create [L]
+
+# RECIPES.DELETE
+# PATTERN: /recipes/delete/x
+# TARGET: ?recipes=delete&id=x
+RewriteRule ^recipes\/delete\/([1-9][0-9]*)$ index.php?recipes=delete&id=$1 [L]
+
 # ROUTE DES CATEGORIES -------------
 
 # CATEGORIES.INDEX
