--- a/main/public/.htaccess
+++ b/main/public/.htaccess
@@ -36,6 +36,16 @@ RewriteRule ^users$ index.php?users=index [L]
 # TARGET: index.php?users=show&id=x
 RewriteRule ^users\/([1-9][0-9]*)\/([a-z0-9][a-z0-9\-]*)*[a-z0-9]$ index.php?users=show&id=$1 [L]
 
+# ROUTE LISTE DES RECETTES PAR CATEGORIE
+# PATTERN: /categories/{id}/{slug}
+# TARGET: index.php?catégories=show&id=x
+RewriteRule ^categories\/([1-9][0-9]*)\/([a-z0-9][a-z0-9\-]*)*[a-z0-9]$ index.php?categories=show&id=$1 [L]
+
+# ROUTE LISTE DES RECETTES PAR INGREDIENT
+# PATTERN: /ingredients/{id}/{slug}
+# TARGET: index.php?ingredients=show&id=x
+RewriteRule ^ingredients\/([1-9][0-9]*)\/([a-z0-9][a-z0-9\-]*)*[a-z0-9]$ index.php?ingredients=show&id=$1 [L]
+
 # --------------------------------------------------
 RewriteCond %{REQUEST_URI} !\.(js|css|jpg|gif|zip|png|pdf)$ [NC]
 RewriteRule ^(.*)$ index.php [L]
